# Hackathon_Cluster

./: README.md  START_HERE.md
humana-grounded-sdg/: .env.example  .gitignore  README.md  pyproject.toml
humana-grounded-sdg/cluster/: evaluate_existing.sh  run_humana_pipeline.sbatch
humana-grounded-sdg/finetune/: NEMO_EVALUATOR_BLOCKER.json  README.md  requirements.txt
humana-grounded-sdg/finetune/cluster/: run_finetune_lora.sbatch
humana-grounded-sdg/finetune/configs/: lora_qwen05b_gpu.yaml  lora_smollm_smoke.yaml
humana-grounded-sdg/finetune/data/: split_manifest.json  support_sft_train.jsonl  support_sft_val.jsonl
humana-grounded-sdg/finetune/scripts/: generate_eval_samples.py  train_lora_sft.py
humana-grounded-sdg/report/: sdg_report.tex  sdg_report_light.tex
humana-grounded-sdg/results/finetune-smoke-smollm135/: README.md  train_metrics.json
humana-grounded-sdg/results/gpu-customer-support-13506/: DATA_CARD.md  conversation_evaluation.json  customer_support_transcripts.jsonl  nemo-service-provenance.json  run-summary.json  selected.sha256
humana-grounded-sdg/results/gpu-full-13372/: evaluation.json  run-summary.json  (+1 more)
humana-grounded-sdg/scripts/: run_nemo_evaluator_skills.sh  run_nemo_safe_synth_conversations.sh  run_offline_smoke.sh
humana-grounded-sdg/tests/: test_cli_conversations.py  test_cli_support.py  test_conversation_workflow.py  test_conversations.py  test_curate.py  test_download.py  test_extract.py  test_generate_evaluate.py  test_manifest.py  test_platform_data.py  test_platform_sdk_compat.py  test_support_transcripts.py
(+46 files in other folders)
