[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "humana-grounded-sdg"
version = "0.1.0"
description = "NeMo-first synthetic data pipeline grounded in public Humana and CMS documents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Yash Kavaiya" }]
dependencies = [
  "httpx>=0.27,<1",
  "pandas>=2.2,<3",
  "pydantic>=2.8,<3",
  "pymupdf>=1.24,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
curator = ["nemo-curator==1.2.0", "torch==2.6.0"]
gpu = ["accelerate>=1.2,<2", "torch==2.6.0", "transformers>=5,<6"]
platform = [
  "nemo-platform==0.2.0",
  "nemo-safe-synthesizer==0.1.2",
  "data-designer==0.8.0",
]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[project.scripts]
humana-sdg = "humana_sdg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/humana_sdg"]

[tool.ruff.lint.per-file-ignores]
"src/humana_sdg/cli.py" = ["B008"]
"src/humana_sdg/embedding.py" = ["S311"]
"src/humana_sdg/nemo_platform_jobs.py" = ["S105"]
"tests/test_platform_sdk_compat.py" = ["S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]
